# robo-advisor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/cache/: SwClassCode_2021.xls  sw_classification.json  sw_code_map.json  sw_names.json
src/: app.py  config.py
src/agent/: llm_client.py  prompts.py
src/analysis/: financial.py  historical.py  industry.py  sector.py
src/data/: fetcher.py
src/database/: cache.py  models.py  report.py
src/report/: formatter.py  render.py
